[gd_scene load_steps=8 format=3 uid="uid://bbgs55f41hqs8"]

[ext_resource type="Script" path="res://Scripts/Master.gd" id="1_rn7d8"]
[ext_resource type="PackedScene" uid="uid://ban4agfxv0snt" path="res://Scenes/World/World Generator.tscn" id="1_ym2i5"]
[ext_resource type="PackedScene" uid="uid://wheagikwl2pa" path="res://Scenes/2DScreens/Menu.tscn" id="2_c8vqa"]
[ext_resource type="Script" path="res://Scripts/2DScreens/CurrentScreen.gd" id="4_iamk4"]

[sub_resource type="Animation" id="Animation_axo10"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ortg0"]
resource_name = "StartCombat"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(3.73213e-05),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fadeToCombat"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e20g4"]
_data = {
"RESET": SubResource("Animation_axo10"),
"StartCombat": SubResource("Animation_ortg0")
}

[node name="Master" type="Node3D"]
script = ExtResource("1_rn7d8")

[node name="Menu" parent="." instance=ExtResource("2_c8vqa")]

[node name="ScreenFX" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="ScreenFX"]
top_level = true
offset_left = -1121.0
offset_top = -657.0
offset_right = 2723.0
offset_bottom = 1373.0
color = Color(0, 0, 0, 0)

[node name="ScreenAnimation" type="AnimationPlayer" parent="ScreenFX"]
libraries = {
"": SubResource("AnimationLibrary_e20g4")
}

[node name="FPS" type="Label" parent="."]
offset_top = 1.0
offset_right = 110.0
offset_bottom = 46.0
text = "FPS"

[node name="CurrentScene" type="Node3D" parent="."]

[node name="World" type="Node3D" parent="CurrentScene"]

[node name="World Generator" parent="CurrentScene/World" instance=ExtResource("1_ym2i5")]

[node name="CurrentScreen" type="Node3D" parent="CurrentScene"]
script = ExtResource("4_iamk4")
